syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProductBrandInfo {
	//ID 
 	string id=2;
	//代号 
 	string code=3;
	//描述 
    string description=4;
	//识别码 
    string identifier=5;
	//备注 
    string remark=6;
}

message QueryProductBrandRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=5;
}

message QueryProductBrandResponse{
    Code code=1;
    string message=2;
    repeated ProductBrandInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductBrandResponse{
    Code code=1;
    string message=2;
    repeated ProductBrandInfo data=3;
}

message GetProductBrandDetailResponse{
    Code code=1;
    string message=2;
    ProductBrandInfo data=3;
}